--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
