--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/server",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index\"",
+    "dev:ts": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@types/node": "^18.7.16",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
