--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx tsc",
     "start": "node dist/server",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index\"",
@@ -24,9 +24,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
     "concurrently": "^7.4.0",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.19",
+    "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
