--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "body-parser": "^1.20.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
