--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.9",
     "jsdom": "^20.0.0",
