--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=17.8.0",
+    "pnpm": ">=7.11.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
