--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,27 @@
 version: '3.8'
 services:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - 5173:5173
+    volumes:
+      - ./frontend/:/app
+      - /app/node_modules
+    depends_on:
+      - backend
+
+  backend:
+    build: .
+    ports:
+      - 3000:3000
+    volumes:
+      - ./:/app
+      - /app/node_modules
+    depends_on:
+      - db
+
   db:
     image: postgres:14.1-alpine
     restart: always
