--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
