--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.20.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "config": "^3.3.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
@@ -41,6 +42,7 @@
     "concurrently": "^7.4.0",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19",
+    "supertest": "^6.2.4",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
