--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.4.0",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19",
