Add first supertest test

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "pnpm": ">=7.11.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=local-development jest",
     "build": "npx tsc",
     "start": "node dist/server",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index\"",
-    "dev:ts": "nodemon index.ts",
+    "dev:ts": "NODE_ENV=local-development nodemon index.ts",
     "typeorm:generate-static": "npx typeorm-ts-node-commonjs migration:generate migrations -d ./config/database.ts",
     "typeorm:generate": "sh -c 'npx typeorm-ts-node-commonjs  migration:generate ./migrations/$0 -d ./config/database.ts '",
     "typeorm:run": "npx typeorm-ts-node-commonjs migration:run -d ./config/database.ts",
