--- a/package.json
+++ b/package.json
@@ -23,22 +23,28 @@
   "license": "ISC",
   "dependencies": {
     "@types/body-parser": "^1.19.2",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.8",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "^3.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.16",
     "@types/supertest": "^2.0.12",
     "concurrently": "^7.4.0",
